# mlops_group_17

./: .gitignore  LICENSE  LICENSE copy  Makefile  README.md  cloudbuild.yaml  data.dvc  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.py
.dvc/: config
.github/workflows/: tests.yml
dockerfiles/: deployment.dockerfile  predict_model.dockerfile  train_model.dockerfile
mlops_group_17/: README.md  pyproject.toml
mlops_group_17/docs/: mkdocs.yaml
mlops_group_17/docs/source/: index.md
outputs/2024-01-12/14-27-38/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/14-28-04/.hydra/: hydra.yaml
outputs/2024-01-12/14-33-40/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/14-34-00/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/14-36-55/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/14-57-59/.hydra/: hydra.yaml
outputs/2024-01-12/14-58-47/.hydra/: hydra.yaml
outputs/2024-01-12/14-59-11/.hydra/: hydra.yaml
outputs/2024-01-12/15-00-16/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/15-00-31/.hydra/: hydra.yaml
outputs/2024-01-12/15-03-00/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/15-03-22/.hydra/: hydra.yaml
outputs/2024-01-12/15-05-59/.hydra/: hydra.yaml
reports/: README.md
src/: __init__.py  predict_model.py  train_model.py
src/config/: config.yaml
src/config/make_data/: make_data.yaml
src/config/test/: test.yaml
src/config/train/: train.yaml
src/config/wandb/: wandb.yaml
src/data/: make_dataset.py
tests/: test_data.py  test_training.py  test_workflow.py
(+52 files in other folders)
